--- a/ChaBubbleTea_css.css
+++ b/ChaBubbleTea_css.css
@@ -87,6 +87,6 @@ p, label {
   box-shadow: 25px 20px 10px #214d43;
   /*margin: auto makes it so that the map is centered. */
   margin: auto;
-  width: 55%;
+  width: 500px;
   height: 500px;
 }
